# CyberChef-CLI

./: Cargo.toml  README.md
docs/: cyberchef-cli-blog.md
src/: Cargo.toml  README.md  cli.rs  main.rs  recipe.rs  tests-rs.rs  utils.rs
src/operations/: analysis.rs  compression.rs  encoding.rs  encryption.rs  hashing.rs  mod.rs  recipe.rs  utils.rs
tests/: operation_tests.rs
