[package]
name = "cyberchef-cli"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A secure command-line implementation of GCHQ's CyberChef tool"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
base64 = "0.21"
hex = "0.4"
sha2 = "0.10"
aes = "0.8"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tempfile = "3.8"
zeroize = "1.6"
rayon = "1.8"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8" 