[package]
name = "cyberchef-cli"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A CLI version of CyberChef for data manipulation"
license = "Apache-2.0"
repository = "https://github.com/yourusername/cyberchef-cli"
readme = "README.md"
keywords = ["cyberchef", "cli", "encryption", "encoding", "data-analysis"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
base64 = "0.21.2"
hex = "0.4.3"
url = "2.4.0"
aes = "0.8.3"
block-modes = "0.9.1"
sha1 = "0.10.5"
sha2 = "0.10.7"
md-5 = "0.10.5"
hmac = "0.12.1"
rsa = "0.9.2"
flate2 = "1.0.27"
bzip2 = "0.4.4"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
regex = "1.9.3"
anyhow = "1.0.75"
thiserror = "1.0.47"
log = "0.4.20"
env_logger = "0.10.0"
